# DataEngeneering_KEEPA_HSWORMS

./: .env.example  .gitignore  AGENDA.md  ARCHITECTURE.md  BigAnalysis.md  DEPLOYMENT.md  Dockerfile  EMAIL_AN_PROF_HEYL.md  FOR_SMLFLG.md  MONITOR_GUIDE.md  PROJECT.md  README.md  docker-compose.yml  fix_dockerfiles.sh  launch_monitor_dashboard.sh  opencode_monitor.sh  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_categories.py  test_keepa.py  test_keepa_connection.py  test_services.py
.agent-context/: agent_history.jsonl  current_task.json  decisions.md
.claude/: plan.md
.old_dockerfiles/: api.Dockerfile.backup  arbitrage.Dockerfile.backup  consumer.Dockerfile.backup  dashboard.Dockerfile.backup  producer.Dockerfile.backup
Explained/: 00_OVERVIEW.md  01_Elasticsearch.md  02_Kafka.md  03_Keepa.md  04_Airflow.md  05_Docker.md  06_FastAPI.md  07_Streamlit.md  08_Poetry.md  09_System_Architecture.md  README.md
Input/: Automatisiertes Amazon Arbitrage-System für Deutsc.md  Ich habe Keepa API zugang__was kann ich damit mach.md  Ich habe meinem Agent den Bauplan lesen lassen und.md  Struktur erfolgreich erstellt! Hier die Zusammenfa.md
KeepaProjectsforDataEngeneering3BranchesMerge/: .env.example  .gitignore  DEMO_CHEATSHEET.md  FOR_SMLFLG.md  PRUEFUNGSPRAESENTATION.md  SESSION_LOG.md  docker-compose.yml
MultiAgentDokumentation/: AFTERVIEW.md  OVERVIEW.md  README.md  VIEW_STATUS.sh  WIE_NUTZE_ICH_DAS.md
VomProfPDF/: Anforderungen für Data Engineering.md  Prüfungsfragen.md  Stand des Projekts.md  Übung 2 - Elasticsearch 2.md  VL1_Einführung.md  (+11 more)
(+236 files in other folders)
