[tool.poetry]
name = "arbitrage-tracker"
version = "0.1.0"
description = "Amazon Arbitrage Price Tracker"
authors = ["Data Engineering Team"]

[tool.poetry.dependencies]
python = "^3.11"

# Kafka
confluent-kafka = "^2.3.0"

# Elasticsearch
elasticsearch = "^8.11.0"

# API
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"

# Dashboard
streamlit = "^1.31.0"
plotly = "^5.22.0"
pandas = "^2.1.0"

# Keepa
requests = "^2.31.0"

# Config
pyyaml = "^6.0.1"

# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"

# Types
types-requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
